Feito sessão de skills

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,5 +1,29 @@
 .skills {
   padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+
+  text-align: center;
+}
+
+.skills .mainSkills {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.mainSkills div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.skills .javascriptIcon {
+  margin-top: 0.35rem;
 }
 
 .skills .typescriptIcon g {
@@ -16,11 +40,22 @@
 }
 
 .skills .powerups {
-  background: linear-gradient(22deg, rgba(29,47,131,1) 4%, rgba(64,146,168,1) 79%);
+  background: linear-gradient(22deg, #242331 4%, #2F2E41 79%);
   border-radius: 30px;
   padding: 1rem;
 }
 
+.skills .list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 0;
+
+  
+}
+
 .skills li {
   font-size: 18px;
+  list-style: none;
 }
