--- a/src/components/Portifolio/Portifolio.css
+++ b/src/components/Portifolio/Portifolio.css
@@ -1,10 +1,10 @@
 .portifolio {
   background: linear-gradient(rgb(0,0,0) 20%, rgb(255, 255, 255, 0) 80%, rgb(0,0,0)), url(../../assets/fundo-banner.jpg) no-repeat;
   background-size: cover;
-  padding: 1.5rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  
 }
 
 .portifolio h2 {
@@ -19,12 +19,34 @@
 .portifolio h4 {
   margin-block: 0;
 }
-.portifolio .personalProjects-list {
+.portifolio .personalProjects-list,
+.portifolio .learningProjects {
   padding-inline: 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+.portifolio .learningProjects {
+  display: block; 
+  
+}
+
+.portifolio .learningProjects ul {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-left: 0;  
+  overflow: auto;
+  
+}
+
+.portifolio .learningProjects ul::-webkit-scrollbar {
+  display: none;
+}
+
+
+
+
 
 
 
