--- a/src/components/ui/Cards/HighlightCard/HighlightCard.css
+++ b/src/components/ui/Cards/HighlightCard/HighlightCard.css
@@ -1,4 +1,4 @@
-.card {
+.highlightCard {
   font-size: 18px;
   background-color: #282736;
   list-style: none;
@@ -11,35 +11,35 @@
   overflow: hidden;
 }
 
-.card .listItem-img {
+.highlightCard .listItem-img {
   height: 60%;
   overflow: hidden;
 } 
 
-.card p {
+.highlightCard p {
   text-align: start;
   line-height: 1.5rem;
 }
 
-.card .listItem-img img {
+.highlightCard .listItem-img img {
   width: 20rem;
   transform: translateY(-15%)
 }
 
-.card .listItem-description {
+.highlightCard .listItem-description {
   padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
-.card .card-buttonContainer {
+.highlightCard .highlightCard-buttonContainer {
   display: flex;
   flex-direction: row;
   gap: 1rem;
 }
 
-.card .cardButton {
+.highlightCard .cardButton {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
