--- a/src/components/ui/Buttons/WhatsappButton/WhatsappButton.css
+++ b/src/components/ui/Buttons/WhatsappButton/WhatsappButton.css
@@ -1,7 +1,7 @@
 .whatsappButton {
-  background-color: white;
+  background-color: var(--brand-light);
   width: 12rem;
-  border: 1px black solid;
+  border: 1px var(--bg-dark) solid;
   border-radius: 40px;
   text-decoration: none;
   font-size: 16px;
