--- a/src/components/ui/Card/Card.css
+++ b/src/components/ui/Card/Card.css
@@ -1,4 +1,4 @@
-.highlightCard {
+.card {
   font-size: 18px;
   background-color: var(--text-dark);
   list-style: none;
@@ -11,35 +11,35 @@
   overflow: hidden;
 }
 
-.highlightCard .listItem-img {
+.card .listItem-img {
   height: 60%;
   overflow: hidden;
 } 
 
-.highlightCard p {
+.card p {
   text-align: start;
   line-height: 1.5rem;
 }
 
-.highlightCard .listItem-img img {
+.card .listItem-img img {
   width: 20rem;
   transform: translateY(-15%)
 }
 
-.highlightCard .listItem-description {
+.card .listItem-description {
   padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
-.highlightCard .highlightCard-buttonContainer {
+.card .card-buttonContainer {
   display: flex;
   flex-direction: row;
   gap: 1rem;
 }
 
-.highlightCard .cardButton {
+.card .cardButton {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
