Iniciado a implementação dinamica dos cards dos projetos

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+.skills strong {
+  color: var(--secondary-color);
+}
+
 .skills .mainSkills {
   display: flex;
   flex-direction: row;
