--- a/src/App.css
+++ b/src/App.css
@@ -22,13 +22,14 @@
 
 body {
   background: var(--bg-dark);
-  font-family: 'Rubik', sans-serif;
-  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
 }
 
 body p, h1, h2, h3, a ul, li{
   margin: 0;
   padding: 0;
+  font-family: 'Rubik';
+  font-weight: 500;
 
   color: var(--brand-light);
 }
