--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  padding: 1.5rem;
+}
+
+.footer strong {
+  color: var(--secondary-color);
 }
 
 .footer-title {
