--- a/src/components/ui/Cards/SliderCard/SliderCard.css
+++ b/src/components/ui/Cards/SliderCard/SliderCard.css
@@ -1,8 +1,8 @@
 .sliderCard {
     font-size: 18px;
-    background-position: top;
+    background-position: left;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     
     list-style: none;
     margin-bottom: 1.5rem;
