Adicionado funcionalidade ao menu, e corrigido pequenos bugs do layout

--- a/src/components/ui/Buttons/MenuButton/MenuButton.css
+++ b/src/components/ui/Buttons/MenuButton/MenuButton.css
@@ -1,3 +1,10 @@
-.menuButton svg{
+
+.menuButton {
+  background-color: var(--bg-dark);
+  border: none;
+}
+
+.menuButton svg {
   fill: var(--brand-light);
+  background-color: var(--bg-dark);
 }
