--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,11 @@
   padding: 1.5rem;
 }
 
+.footer a {
+  text-decoration: none;
+  color: var(--brand-light);
+}
+
 .footer strong {
   color: var(--secondary-color);
 }
@@ -23,6 +28,10 @@
     height: 0.5px;
 }
 
+.footer .footer-alignContactContainer {
+  margin: auto;
+}
+
 .footer .footer-menulinksContainer {
   display: flex;
   flex-direction: row;
@@ -37,6 +46,7 @@
   list-style: none;
 }
 
+
 .footer .footer-contactContainer {
   display: flex;
   flex-direction: row;
@@ -45,6 +55,10 @@
   gap: 1rem;
 
   margin: auto;
+}
+
+.footer .footer-copyright {
+  color: var(--text-dark);
 }
 
 
