--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,14 @@
 .header {
   background: var(--bg-dark);
-  
-  padding: 0.5rem 1.5rem;
+  position: fixed;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.header-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 0.5rem 1.5rem;
 }
