--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,9 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+
+  padding-block: 0;
 }
 .header-container {
   display: flex;
