Feito ajuste no card de portifolio pessoal, e iniciado parte responsiva

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,12 @@
   --tag-typescript-bg: hsl(210, 63%, 48%);
 }
 
+/* BREAKPOINTS
+480PX
+768PX
+1024PX
+1280PX
+
 
 body {
   background: var(--bg-dark);
