Feito parte responsiva do header, e foi ajustado nome do site

--- a/src/components/ui/Buttons/MenuButton/MenuButton.css
+++ b/src/components/ui/Buttons/MenuButton/MenuButton.css
@@ -8,3 +8,9 @@
   fill: var(--brand-light);
   background-color: var(--bg-dark);
 }
+
+@media (min-width: 1024px) {
+  .menuButton {
+      display: none;
+  }
+}
