--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -22,6 +22,7 @@
 }
 .about p {
   line-height: 1.5rem;
+  width: 30rem;
 }
 
 .about a{
@@ -32,6 +33,22 @@
   max-width: 20rem;
 }
 
+@media (min-width: 1024px) {
+  .aboutContainer {
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+  }
+  .aboutContainer-reverse i {
+    order: 2;
+  }
+  .aboutContainer-reverse img {
+    order: 1;
+  }
+}
 
 
 
