--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,7 +1,8 @@
 .main {  
   background: linear-gradient(var(--bg-dark) 20%, rgb(255, 255, 255, 0) 80%, var(--bg-dark)), url(../../assets/fundo-banner.jpg) no-repeat;
   background-size: cover;
-  height: 100vh;
+  height: 60vh;
+  padding-top: 15rem;
 
   display: flex;
   flex-direction: column;
@@ -40,8 +41,8 @@
   .main {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly
-    ;
+    justify-content: space-evenly;
+    padding: 10rem 0 0 5rem;
   }
   .mainContainer {
     display: flex;
