--- a/src/components/ui/Cards/SliderCard/SliderCard.css
+++ b/src/components/ui/Cards/SliderCard/SliderCard.css
@@ -55,4 +55,10 @@
     padding: 0.2rem;
     text-decoration: none;
   }
+
+  @media (min-width: 1024px) {
+    .sliderCard {
+      margin-bottom: 0;
+    }
+  }
   
