substituido favicon, ajustado alguns efeitos de sombra do header e hover

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -24,6 +24,9 @@
     color: var(--brand-light);
     text-decoration: none;
 }
+.nav .navLinks-listItem a:hover {
+  text-shadow: 2px 2px 8px var(--brand-light);
+}
 
 @media (min-width: 1024px) {
     .nav .navLinks {
