--- a/src/components/ui/Buttons/CTAButton/CTAButton.css
+++ b/src/components/ui/Buttons/CTAButton/CTAButton.css
@@ -1,8 +1,8 @@
 .CTAButton {
-  background-color: var(--brand-light);
+  background: rgb(179,179,179);
+  background: linear-gradient(9deg, rgba(179,179,179,1) 41%, rgba(255,255,255,1) 100%);
   color: var(--bg-dark);
   width: 12rem;
-  border: 1px var(--bg-dark) solid;
   border-radius: 40px;
   text-decoration: none;
   font-size: 16px;
