--- a/src/components/ui/Buttons/WhatsappButton/WhatsappButton.css
+++ b/src/components/ui/Buttons/WhatsappButton/WhatsappButton.css
@@ -1,7 +1,7 @@
 .whatsappButton {
-  background-color: var(--brand-light);
+  background: rgb(179,179,179);
+  background: linear-gradient(9deg, rgba(179,179,179,1) 41%, rgba(255,255,255,1) 100%);
   width: 12rem;
-  border: 1px var(--bg-dark) solid;
   border-radius: 40px;
   text-decoration: none;
   font-size: 16px;
@@ -12,6 +12,14 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1rem;
+
+  -webkit-box-shadow: 10px 10px 29px -24px rgba(255, 255, 255, 0.75);
+-moz-box-shadow: 10px 10px 29px -24px rgba(255, 255, 255, 0.75);
+box-shadow: 10px 10px 29px -24px rgba(255, 255, 255, 0.75);
+
+ 
+
+  
 }
 
 .whatsappButton p{
