--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -33,6 +33,16 @@
   max-width: 20rem;
 }
 
+.aboutContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+
+
 @media (min-width: 1024px) {
   .aboutContainer {
     display: flex;
