--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 body {
   background: var(--bg-dark);
   -webkit-font-smoothing: antialiased;
-  
+  overflow: auto;
 }
 
 body p, h1, h2, h3, a ul, li{
